# btc_charts_v2

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: 21_50_200_chart.py  btc_binance_funding_rates.py  btc_fartcoin_ratio_chart.py  btc_funding_rates_window.py  download_data_coingecko.py  funding_rates_btc_binance.py  get_price_data_cryptocompare.py  indicators.py  interactive_classic_200_week_sma.py  pi_bottom_top.py  plotting_utils.py  price_zscore_chart.py  ratio_btc_fartcoin.py  rsi_vs_halving.py  sma_vs_sma.py  usd_m2_vs_btc.py
src/cryptocompare_data/: cryptocompare_historic_btc_price.csv  cryptocompare_historic_fartcoin_price.csv  cryptocompare_historic_troll_price.csv
